--- a/public/screen.css
+++ b/public/screen.css
@@ -6,4 +6,42 @@ body {
   margin: 0;
   min-height: 100%;
   font: 16px / 1 sans-serif;
+  background-image: url(/images/poker.png)
+}
+h1{
+  color: white;
+}
+h2{
+  color: white;
+}
+h3{
+  color: white;
+}
+:root {
+  --aspect-ratio: 1056px/691;
+}
+
+.dealer-hand {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.dealer-hand img {
+  width: 150px;
+  height: calc(var(--aspect-ratio) * 150);
+}
+header{
+  display: flex;
+  justify-content: center;
+  font-size: 36px;
+}
+.player-hand {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.player-hand img {
+  width: 150px;
+  height: calc(var(--aspect-ratio) * 150);
 }
